# sberhack

./: .gitignore  Makefile  docker-compose.override.yaml  docker-compose.yaml
backend/: Dockerfile  Makefile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: main.py
backend/src/app/api/dependencies/: common.py  users.py
backend/src/app/api/routes/: ai.py  books.py  healthcheck.py  login.py  users.py
backend/src/app/core/: security.py  settings.py
backend/src/app/crud/: login.py  user.py
backend/src/app/db/: schemas.py
backend/src/app/db/models/: __init__.py  achievement.py  book.py  book_action.py  event.py  library.py  library_book.py  library_ticket.py  pincode.py  user.py
backend/src/app/modules/: irbis.py
backend/src/app/service/: login.py  user.py
backend/src/app/utils/: emails.py
backend/src/migrations/versions/: 28ce8b0cc5b7_added.py  5434af1433e7_added.py  ad871ae78ebd_added.py  d68b99be3588_initial.py
frontend/sabantui/: README.md  angular.json  ngsw-config.json  package-lock.json  package.json
frontend/sabantui/public/: manifest.webmanifest
frontend/sabantui/src/: index.html
frontend/sabantui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/sabantui/src/app/components/book-page/: book-page.component.css  book-page.component.html  book-page.component.ts
frontend/sabantui/src/app/components/books/: books.component.css  books.component.html  books.component.ts
frontend/sabantui/src/app/components/code-verify-step/: code-verify-step.component.css  (+2 more)
(+39 files in other folders)
